basic heartbeat transaction
