# lib/httpServer/index.js
@@ -142,6 +142,29 @@ class HttpServer {
             }
         });
 
+        this.app.post('/operator/wallets/:walletId/heartbeat', (req, res) => {
+            let walletId = req.params.walletId;
+            let password = req.headers.password;
+
+            if (password == null) throw new HTTPError(401, 'Wallet\'s password is missing.');
+            let passwordHash = CryptoUtil.hash(password);
+
+            try {
+                if (!operator.checkWalletPassword(walletId, passwordHash)) throw new HTTPError(403, `Invalid password for wallet '${walletId}'`);
+
+                let newTransaction = operator.createHeartbeatTransaction(walletId, req.body.fromAddress, req.body.data);
+
+                newTransaction.check();
+
+                let transactionCreated = blockchain.addTransaction(Transaction.fromJson(newTransaction));
+                res.status(201).send(transactionCreated);
+            } catch (ex) {
+                if (ex instanceof ArgumentError || ex instanceof TransactionAssertionError) throw new HTTPError(400, ex.message, walletId, ex);
+                else throw ex;
+            }
+        });
+
+
         this.app.get('/operator/wallets/:walletId/addresses', (req, res) => {
             let walletId = req.params.walletId;
             try {
