# lib/httpServer/swagger.json
@@ -404,6 +404,68 @@
                 }
             }
         },
+        "/operator/wallets/{walletId}/heartbeat": {
+            "post": {
+                "tags": [
+                    "operator"
+                ],
+                "summary": "Create a new heartbeat transaction",
+                "description": "",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "walletId",
+                        "description": "Wallet id",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "header",
+                        "name": "password",
+                        "description": "Wallet password",
+                        "required": true,
+                        "type": "string",
+                        "format": "password"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Transaction to be created",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "fromAddress": {
+                                    "type": "string",
+                                    "description": "From address"
+                                },
+                                "data" : {
+                                    "type": "string",
+                                    "description" : "heartbeat json data"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/Transaction"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/operator/wallets/{walletId}/addresses": {
             "get": {
                 "tags": [
